<resources>
    <string name="app_name">Carteirinha Pet</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="username">Nome de usuário</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up">Cadastrar</string>
    <string name="back">Voltar</string>
    <string name="logout">Sair</string>
    <string name="petType">Tipo (cão, gato etc.)</string>
    <string name="petName">Nome do seu pet</string>
    <string name="petGenre">Gênero (macho ou fêmea)</string>
    <string name="petBreed">Raça</string>
    <string name="petBornDate">Data de nascimento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
